--- a/src/data_explorations/eda_01.ipynb
+++ b/src/data_explorations/eda_01.ipynb
@@ -188,16 +188,57 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
+    "import json\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
-    "message_counts = [len(chat[\"messages\"]) for chat in data]\n",
+    "# Path to your dataset file (assumes the file is uploaded as 'gulf_chats_merged.json')\n",
+    "file_path = \"/mnt/data/gulf_chats_merged.json\"\n",
     "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.histplot(message_counts, bins=range(1, max(message_counts)+2), kde=False, color=\"salmon\")\n",
-    "plt.xlabel(\"Number of Messages\")\n",
-    "plt.ylabel(\"Number of Chats\")\n",
-    "plt.title(\"Distribution of Message Counts per Chat\")\n",
-    "plt.grid(axis=\"y\", linestyle=\"--\", alpha=0.7)\n",
+    "# Load the dataset\n",
+    "with open(file_path, \"r\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Count number of messages per chat\n",
+    "messages_per_chat = {chat[\"chat_id\"]: len(chat[\"messages\"]) for chat in data}\n",
+    "\n",
+    "# Basic stats for overview\n",
+    "total_conversations = len(messages_per_chat)\n",
+    "total_messages = sum(messages_per_chat.values())\n",
+    "avg_message_length = total_messages / total_conversations\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Prepare data for display\n",
+    "summary_df = pd.DataFrame({\n",
+    "    \"Total Conversations\": [total_conversations],\n",
+    "    \"Total Messages\": [total_messages],\n",
+    "    \"Avg. Messages per Chat\": [round(avg_message_length, 2)]\n",
+    "})\n",
+    "\n",
+    "# Prepare pie chart data (simulate user type distribution for illustration)\n",
+    "user_type_distribution = {\"First-Time Users\": 0.67, \"Returning Users\": 0.33}\n",
+    "\n",
+    "# Plot the dashboard-style chart\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "# Display messages per chat bar chart\n",
+    "ax[0].bar(messages_per_chat.keys(), messages_per_chat.values(), color='mediumslateblue')\n",
+    "ax[0].set_title(\"Messages per Chat\")\n",
+    "ax[0].set_xlabel(\"Chat ID\")\n",
+    "ax[0].set_ylabel(\"Number of Messages\")\n",
+    "ax[0].tick_params(axis='x', rotation=90)\n",
+    "\n",
+    "# Pie chart for user types\n",
+    "ax[1].pie(user_type_distribution.values(), labels=user_type_distribution.keys(),\n",
+    "          autopct='%1.0f%%', colors=['skyblue', 'mediumorchid'], textprops={'fontsize': 10})\n",
+    "ax[1].set_title(\"User Type Distribution\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "import ace_tools as tools; tools.display_dataframe_to_user(name=\"Chat Summary Overview\", dataframe=summary_df)\n",
+    "\n",
     "plt.show()\n"
    ]
   }
