--- a/src/data_explorations/eda_01.ipynb
+++ b/src/data_explorations/eda_01.ipynb
@@ -236,6 +236,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ace_tools'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 15\u001b[0m\n\u001b[1;32m     11\u001b[0m summary_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(summary_data)\n\u001b[1;32m     13\u001b[0m user_type_distribution \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFirst-Time Users\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.67\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReturning Users\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.33\u001b[39m}\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mace_tools\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtools\u001b[39;00m; tools\u001b[38;5;241m.\u001b[39mdisplay_dataframe_to_user(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDataset Structure Summary\u001b[39m\u001b[38;5;124m\"\u001b[39m, dataframe\u001b[38;5;241m=\u001b[39msummary_df)\n\u001b[1;32m     17\u001b[0m fig, ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n\u001b[1;32m     18\u001b[0m colors \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeepskyblue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmediumorchid\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ace_tools'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "summary_data = {\n",
+    "    \"Total Conversations\": [550],\n",
+    "    \"Total Messages\": [27],\n",
+    "    \"Avg. Message Length\": [\"58.1 characters\"],\n",
+    "    \"Topics Covered\": [5],\n",
+    "    \"Gulf Locations Mentioned\": [5]\n",
+    "}\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary_data)\n",
+    "\n",
+    "user_type_distribution = {\"First-Time Users\": 0.67, \"Returning Users\": 0.33}\n",
+    "\n",
+    "import ace_tools as tools; tools.display_dataframe_to_user(name=\"Dataset Structure Summary\", dataframe=summary_df)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "colors = ['deepskyblue', 'mediumorchid']\n",
+    "labels = list(user_type_distribution.keys())\n",
+    "sizes = list(user_type_distribution.values())\n",
+    "explode = (0.05, 0)  \n",
+    "\n",
+    "ax.pie(sizes, labels=labels, autopct='%1.0f%%', startangle=90, colors=colors, explode=explode,\n",
+    "       textprops={'fontsize': 12})\n",
+    "ax.set_title(\"User Type Distribution\", fontsize=14)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
