--- a/data_initial/synthetic_initial.ipynb
+++ b/data_initial/synthetic_initial.ipynb
@@ -143,19 +143,15 @@
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# Count number of messages per conversation\n",
     "df['message_count'] = df['messages'].apply(len)\n",
     "\n",
-    "# Count how many conversations have 4, 5, 6, ... messages\n",
     "message_dist = df['message_count'].value_counts().sort_index()\n",
     "\n",
-    "# Filter for message counts between 4 and 7 (or more, adjust as needed)\n",
     "filtered_dist = message_dist[(message_dist.index >= 4) & (message_dist.index <= 7)]\n",
     "\n",
-    "# Plot\n",
     "plt.figure(figsize=(8, 6))\n",
     "bars = plt.bar(filtered_dist.index.astype(str), filtered_dist.values, color='mediumseagreen')\n",
-    "plt.title(\"📊 Number of Conversations by Message Count (4–7)\", fontsize=14)\n",
+    "plt.title(\"Number of Conversations by Message Count\", fontsize=14)\n",
     "plt.xlabel(\"Number of Messages\")\n",
     "plt.ylabel(\"Number of Conversations\")\n",
     "\n",
