--- a/data_initial/synthetic_initial.ipynb
+++ b/data_initial/synthetic_initial.ipynb
@@ -68,10 +68,10 @@
     "from collections import Counter\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
-    "import bidi.algorithm as bidi  # Add support for bidirectional text\n",
-    "import arabic_reshaper  # For proper Arabic text reshaping\n",
+    "import bidi.algorithm as bidi  \n",
+    "import arabic_reshaper \n",
     "from io import BytesIO\n",
-    "import matplotlib.font_manager as fm  # For font management\n",
+    "import matplotlib.font_manager as fm  \n",
     "import unicodedata\n",
     "\n",
     "class BigramAnalyzer:\n",
@@ -94,23 +94,20 @@
     "        self.stopwords = set()\n",
     "        self.language = language.lower()\n",
     "        \n",
-    "        # Set up matplotlib for RTL languages if needed\n",
+    "       \n",
     "        if self.language == 'arabic':\n",
     "            plt.rcParams['axes.unicode_minus'] = False\n",
     "            \n",
-    "            # Try to find a font that supports Arabic\n",
     "            arabic_fonts = [f for f in fm.findSystemFonts() \n",
     "                           if any(name in f.lower() for name in \n",
     "                                 ['arabic', 'noto', 'amiri', 'scheherazade', 'tahoma', 'arial'])]\n",
     "            \n",
     "            if arabic_fonts:\n",
-    "                # Use the first matching font\n",
     "                plt.rcParams['font.family'] = fm.FontProperties(fname=arabic_fonts[0]).get_name()\n",
     "                print(f\"Using font: {plt.rcParams['font.family']} for Arabic text\")\n",
     "            else:\n",
     "                print(\"Warning: No suitable Arabic font found. Text may not display correctly.\")\n",
     "        \n",
-    "        # Create output directory if it doesn't exist\n",
     "        if not os.path.exists(self.output_dir):\n",
     "            os.makedirs(self.output_dir)\n",
     "        \n",
