modified:   data_initial/synthetic_initial.ipynb

--- a/data_initial/synthetic_initial.ipynb
+++ b/data_initial/synthetic_initial.ipynb
@@ -183,10 +183,8 @@
     "            data (list): List of chat data dictionaries.\n",
     "        \"\"\"\n",
     "        try:\n",
-    "            # Convert to DataFrame\n",
     "            self.df = pd.DataFrame(data)\n",
     "            \n",
-    "            # Extract all messages into a single list\n",
     "            self.all_messages = []\n",
     "            for messages in self.df['messages']:\n",
     "                self.all_messages.extend([msg for msg in messages if isinstance(msg, str)])\n",
@@ -207,19 +205,14 @@
     "        Returns:\n",
     "            str: Normalized Arabic text.\n",
     "        \"\"\"\n",
-    "        # Remove diacritics (tashkeel)\n",
     "        text = re.sub(r'[\\u064B-\\u065F]', '', text)\n",
     "        \n",
-    "        # Normalize alef forms to plain alef\n",
     "        text = re.sub(r'[إأآا]', 'ا', text)\n",
     "        \n",
-    "        # Normalize ya and alef maksura\n",
     "        text = re.sub(r'[يى]', 'ي', text)\n",
     "        \n",
-    "        # Normalize hamzas on carriers to hamza\n",
     "        text = re.sub(r'[ؤئ]', 'ء', text)\n",
     "        \n",
-    "        # Normalize ta marbuta to ha\n",
     "        text = re.sub(r'ة', 'ه', text)\n",
     "        \n",
     "        return text\n",
@@ -243,34 +236,29 @@
     "        \"\"\"\n",
     "        has_arabic = self.is_arabic_string(text)\n",
     "        \n",
-    "        # Skip empty text\n",
     "        if not text:\n",
     "            return []\n",
     "        \n",
-    "        # Convert to lowercase for non-Arabic text\n",
     "        if not has_arabic:\n",
     "            text = text.lower()\n",
     "        else:\n",
-    "            # Normalize Arabic text\n",
     "            text = self.normalize_arabic_text(text)\n",
     "        \n",
-    "        # Remove URLs, emojis, special characters\n",
-    "        text = re.sub(r'http\\S+', '', text)  # Remove URLs\n",
+    "        text = re.sub(r'http\\S+', '', text)  \n",
     "        \n",
-    "        # For Arabic, keep Arabic punctuation but remove others\n",
     "        if has_arabic:\n",
-    "            # Remove non-Arabic characters and keep Arabic punctuation\n",
+    "            \n",
     "            text = re.sub(r'[^\\u0600-\\u06FF\\u0750-\\u077F\\u08A0-\\u08FF\\uFB50-\\uFDFF\\uFE70-\\uFEFF\\s]', ' ', text)\n",
     "        else:\n",
-    "            # For non-Arabic, replace punctuation with space\n",
+    "            \n",
     "            text = re.sub(r'[^\\w\\s]', ' ', text)\n",
     "        \n",
-    "        # Tokenize\n",
+    "        \n",
     "        if has_arabic:\n",
-    "            # Simple whitespace tokenization for Arabic (often works better than NLTK for Arabic)\n",
+    "            \n",
     "            tokens = text.split()\n",
     "            \n",
-    "            # Try Arabic-specific tokenizer if available\n",
+    "            \n",
     "            try:\n",
     "                import pyarabic.araby as araby\n",
     "                tokens = araby.tokenize(text)\n",
@@ -280,7 +268,7 @@
     "            try:\n",
     "                tokens = nltk.word_tokenize(text)\n",
     "            except:\n",
-    "                # Fall back to simple splitting if NLTK not available\n",
+    "                \n",
     "                tokens = text.split()\n",
     "        \n",
     "        # Filter tokens\n",
